--- a/huachentel/hctel-config/openwrt.config
+++ b/huachentel/hctel-config/openwrt.config
@@ -357,7 +357,7 @@ CONFIG_FEED_telephony=y
 CONFIG_PACKAGE_attendedsysupgrade-common=y
 # CONFIG_PACKAGE_auc is not set
 CONFIG_PACKAGE_base-files=y
-# CONFIG_PACKAGE_block-mount is not set
+CONFIG_PACKAGE_block-mount=y
 # CONFIG_PACKAGE_blockd is not set
 # CONFIG_PACKAGE_bridge is not set
 CONFIG_PACKAGE_busybox=y
@@ -1842,12 +1842,19 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_DMESG_PRETTY=y
 # CONFIG_BUSYBOX_CONFIG_FATATTR is not set
 # CONFIG_BUSYBOX_CONFIG_FBSET is not set
 # CONFIG_BUSYBOX_CONFIG_FDFORMAT is not set
-# CONFIG_BUSYBOX_CONFIG_FDISK is not set
+CONFIG_BUSYBOX_CONFIG_FDISK=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FDISK_WRITABLE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_AIX_LABEL=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_SGI_LABEL=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_SUN_LABEL=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_OSF_LABEL=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_GPT_LABEL=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_FDISK_ADVANCED is not set
 # CONFIG_BUSYBOX_CONFIG_FINDFS is not set
 CONFIG_BUSYBOX_CONFIG_FLOCK=y
 # CONFIG_BUSYBOX_CONFIG_FDFLUSH is not set
 # CONFIG_BUSYBOX_CONFIG_FREERAMDISK is not set
-# CONFIG_BUSYBOX_CONFIG_FSCK_MINIX is not set
+CONFIG_BUSYBOX_CONFIG_FSCK_MINIX=y
 # CONFIG_BUSYBOX_CONFIG_FSFREEZE is not set
 # CONFIG_BUSYBOX_CONFIG_FSTRIM is not set
 # CONFIG_BUSYBOX_CONFIG_GETOPT is not set
@@ -1864,17 +1871,20 @@ CONFIG_BUSYBOX_CONFIG_HWCLOCK=y
 # CONFIG_BUSYBOX_CONFIG_LOSETUP is not set
 CONFIG_BUSYBOX_CONFIG_LSPCI=y
 CONFIG_BUSYBOX_CONFIG_LSUSB=y
-# CONFIG_BUSYBOX_CONFIG_MDEV is not set
+CONFIG_BUSYBOX_CONFIG_MDEV=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_MDEV_CONF is not set
+# CONFIG_BUSYBOX_CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
 # CONFIG_BUSYBOX_CONFIG_MESG is not set
-# CONFIG_BUSYBOX_CONFIG_MKE2FS is not set
-# CONFIG_BUSYBOX_CONFIG_MKFS_EXT2 is not set
-# CONFIG_BUSYBOX_CONFIG_MKFS_MINIX is not set
+CONFIG_BUSYBOX_CONFIG_MKE2FS=y
+CONFIG_BUSYBOX_CONFIG_MKFS_EXT2=y
+CONFIG_BUSYBOX_CONFIG_MKFS_MINIX=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_MINIX2 is not set
 # CONFIG_BUSYBOX_CONFIG_MKFS_REISER is not set
-# CONFIG_BUSYBOX_CONFIG_MKDOSFS is not set
-# CONFIG_BUSYBOX_CONFIG_MKFS_VFAT is not set
+CONFIG_BUSYBOX_CONFIG_MKDOSFS=y
+CONFIG_BUSYBOX_CONFIG_MKFS_VFAT=y
 CONFIG_BUSYBOX_CONFIG_MKSWAP=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_MKSWAP_UUID is not set
-# CONFIG_BUSYBOX_CONFIG_MORE is not set
+CONFIG_BUSYBOX_CONFIG_MORE=y
 CONFIG_BUSYBOX_CONFIG_MOUNT=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_FAKE is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_VERBOSE is not set
@@ -1904,8 +1914,9 @@ CONFIG_BUSYBOX_CONFIG_PIVOT_ROOT=y
 # CONFIG_BUSYBOX_CONFIG_SWAPON is not set
 # CONFIG_BUSYBOX_CONFIG_SWAPOFF is not set
 CONFIG_BUSYBOX_CONFIG_SWITCH_ROOT=y
-# CONFIG_BUSYBOX_CONFIG_TASKSET is not set
-# CONFIG_BUSYBOX_CONFIG_UEVENT is not set
+CONFIG_BUSYBOX_CONFIG_TASKSET=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TASKSET_FANCY=y
+CONFIG_BUSYBOX_CONFIG_UEVENT=y
 CONFIG_BUSYBOX_CONFIG_UMOUNT=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_UMOUNT_ALL=y
 # CONFIG_BUSYBOX_CONFIG_UNSHARE is not set
@@ -2058,7 +2069,15 @@ CONFIG_BUSYBOX_CONFIG_ROUTE=y
 # CONFIG_BUSYBOX_CONFIG_TELNET is not set
 # CONFIG_BUSYBOX_CONFIG_TELNETD is not set
 # CONFIG_BUSYBOX_CONFIG_TFTP is not set
-# CONFIG_BUSYBOX_CONFIG_TFTPD is not set
+CONFIG_BUSYBOX_CONFIG_TFTPD=y
+
+#
+# Common options for tftp/tftpd
+#
+CONFIG_BUSYBOX_CONFIG_FEATURE_TFTP_GET=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TFTP_PUT=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_TFTP_BLOCKSIZE is not set
+# CONFIG_BUSYBOX_CONFIG_TFTP_DEBUG is not set
 # CONFIG_BUSYBOX_CONFIG_TLS is not set
 CONFIG_BUSYBOX_CONFIG_TRACEROUTE=y
 CONFIG_BUSYBOX_CONFIG_TRACEROUTE6=y
@@ -2066,7 +2085,13 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_VERBOSE=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
 # CONFIG_BUSYBOX_CONFIG_TUNCTL is not set
 # CONFIG_BUSYBOX_CONFIG_VCONFIG is not set
-# CONFIG_BUSYBOX_CONFIG_WGET is not set
+CONFIG_BUSYBOX_CONFIG_WGET=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_LONG_OPTIONS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_STATUSBAR=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_AUTHENTICATION=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_TIMEOUT=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_HTTPS is not set
+# CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_OPENSSL is not set
 # CONFIG_BUSYBOX_CONFIG_WHOIS is not set
 # CONFIG_BUSYBOX_CONFIG_ZCIP is not set
 # CONFIG_BUSYBOX_CONFIG_UDHCPC6 is not set
@@ -2930,7 +2955,7 @@ CONFIG_PACKAGE_kmod-veth=y
 # CONFIG_PACKAGE_kmod-it87-wdt is not set
 # CONFIG_PACKAGE_kmod-itco-wdt is not set
 # CONFIG_PACKAGE_kmod-lp is not set
-# CONFIG_PACKAGE_kmod-mmc is not set
+CONFIG_PACKAGE_kmod-mmc=y
 # CONFIG_PACKAGE_kmod-mtd-rw is not set
 # CONFIG_PACKAGE_kmod-mtdoops is not set
 # CONFIG_PACKAGE_kmod-mtdram is not set
@@ -2952,7 +2977,7 @@ CONFIG_PACKAGE_kmod-rtc-pcf2123=m
 CONFIG_PACKAGE_kmod-rtc-pcf8563=m
 CONFIG_PACKAGE_kmod-rtc-pt7c4338=m
 CONFIG_PACKAGE_kmod-rtc-rs5c372a=m
-# CONFIG_PACKAGE_kmod-sdhci is not set
+CONFIG_PACKAGE_kmod-sdhci=y
 # CONFIG_PACKAGE_kmod-serial-8250 is not set
 # CONFIG_PACKAGE_kmod-softdog is not set
 # CONFIG_PACKAGE_kmod-ssb is not set
@@ -3027,22 +3052,22 @@ CONFIG_PACKAGE_kmod-usb-serial=y
 # CONFIG_PACKAGE_kmod-usb-serial-cypress-m8 is not set
 # CONFIG_PACKAGE_kmod-usb-serial-dmx_usb_module is not set
 # CONFIG_PACKAGE_kmod-usb-serial-edgeport is not set
-# CONFIG_PACKAGE_kmod-usb-serial-ftdi is not set
+CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
 # CONFIG_PACKAGE_kmod-usb-serial-garmin is not set
 CONFIG_PACKAGE_kmod-usb-serial-ipw=y
 # CONFIG_PACKAGE_kmod-usb-serial-keyspan is not set
 # CONFIG_PACKAGE_kmod-usb-serial-mct is not set
 # CONFIG_PACKAGE_kmod-usb-serial-mos7720 is not set
-# CONFIG_PACKAGE_kmod-usb-serial-option is not set
+CONFIG_PACKAGE_kmod-usb-serial-option=y
 # CONFIG_PACKAGE_kmod-usb-serial-oti6858 is not set
-# CONFIG_PACKAGE_kmod-usb-serial-pl2303 is not set
+CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
 CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
 # CONFIG_PACKAGE_kmod-usb-serial-sierrawireless is not set
 # CONFIG_PACKAGE_kmod-usb-serial-simple is not set
 # CONFIG_PACKAGE_kmod-usb-serial-ti-usb is not set
 # CONFIG_PACKAGE_kmod-usb-serial-visor is not set
 CONFIG_PACKAGE_kmod-usb-serial-wwan=y
-CONFIG_PACKAGE_kmod-usb-serial-xr_usb_serial_common=y
+CONFIG_PACKAGE_kmod-usb-serial-xr_usb_serial_common=m
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
@@ -3901,7 +3926,7 @@ CONFIG_LIBCURL_PROXY=y
 # CONFIG_PACKAGE_libdrm is not set
 # CONFIG_PACKAGE_libedit is not set
 # CONFIG_PACKAGE_libelf1 is not set
-# CONFIG_PACKAGE_libcomerr is not set
+CONFIG_PACKAGE_libcomerr=y
 # CONFIG_PACKAGE_libdb47xx is not set
 # CONFIG_PACKAGE_libdbus is not set
 # CONFIG_PACKAGE_libecdsautil is not set
@@ -3919,7 +3944,7 @@ CONFIG_LIBCURL_PROXY=y
 # CONFIG_PACKAGE_libexif is not set
 CONFIG_PACKAGE_libexpat=y
 # CONFIG_PACKAGE_libexslt is not set
-# CONFIG_PACKAGE_libext2fs is not set
+CONFIG_PACKAGE_libext2fs=y
 # CONFIG_PACKAGE_libextractor is not set
 # CONFIG_PACKAGE_libf2fs is not set
 # CONFIG_PACKAGE_libfaad2 is not set
@@ -4063,7 +4088,7 @@ CONFIG_PACKAGE_libpopt=y
 # CONFIG_PACKAGE_libreadline is not set
 # CONFIG_PACKAGE_libredblack is not set
 # CONFIG_PACKAGE_libroxml is not set
-# CONFIG_PACKAGE_librpc is not set
+CONFIG_PACKAGE_librpc=y
 # CONFIG_PACKAGE_librrd1 is not set
 # CONFIG_PACKAGE_librtlsdr is not set
 # CONFIG_PACKAGE_libruby is not set
@@ -4086,7 +4111,7 @@ CONFIG_PACKAGE_libsmartcols=y
 # CONFIG_PACKAGE_libsoxr is not set
 # CONFIG_PACKAGE_libspeex is not set
 # CONFIG_PACKAGE_libspeexdsp is not set
-# CONFIG_PACKAGE_libss is not set
+CONFIG_PACKAGE_libss=y
 # CONFIG_PACKAGE_libssh is not set
 CONFIG_PACKAGE_libssh2=y
 CONFIG_LIBSSH2_MBEDTLS=y
@@ -5458,7 +5483,7 @@ CONFIG_PACKAGE_px5g-mbedtls=y
 # CONFIG_PACKAGE_dosfstools is not set
 # CONFIG_PACKAGE_dumpe2fs is not set
 # CONFIG_PACKAGE_e2freefrag is not set
-# CONFIG_PACKAGE_e2fsprogs is not set
+CONFIG_PACKAGE_e2fsprogs=y
 # CONFIG_PACKAGE_f2fs-tools is not set
 # CONFIG_PACKAGE_f2fsck is not set
 # CONFIG_PACKAGE_filefrag is not set
